Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -162,8 +162,12 @@
         "-WWSnBrXA39V",
         "D8oqXAX5A4VI",
         "994fZwS78_ZX",
-        "J08dtKYX30yU",
         "BjBgQ5WJ302e",
+        "YMKx3SBSevNQ",
+        "Cm1OSu2SevNR",
+        "-lMNyxheevNS",
+        "W1bsY1TGewVw",
+        "jz9aOmpkewVw",
         "oqZ3i95jWOSr",
         "WzwUHBI4pjsC",
         "n-jLje1Epjv5",
@@ -223,7 +227,7 @@
         "CWT4iS2ert0S",
         "jyPXRy8ZyCvz"
       ],
-      "authorship_tag": "ABX9TyMO5LJTl2TGDl2fA1RpuutL",
+      "authorship_tag": "ABX9TyObrcq9bOQNn+r2FO6bKLqI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -11023,7 +11027,7 @@
         "id": "0l8CJACU8_ZX"
       },
       "source": [
-        "### 32 단계 :===========**"
+        "### 32 단계 : 기하===========**"
       ]
     },
     {
@@ -11032,7 +11036,7 @@
         "id": "994fZwS78_ZX"
       },
       "source": [
-        "####  번"
+        "####  2166번"
       ]
     },
     {
@@ -11041,11 +11045,29 @@
         "id": "_gLJLPzk8_ZX"
       },
       "source": [
+        "# 다각형의 넓이를 구하는 공식을 몰라 질문 검색을 통해 신발끈 정리를 알게 되었다.\n",
+        "# 참고 사이트 : 위키백과 신발끈 정리\n",
+        "\n",
         "import sys\n",
         "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
-        "def main():\n",
+        "def main():                                             # 메인 함수\n",
+        "    n = int(input())                                        # \n",
+        "\n",
+        "    t = []\n",
+        "    for _ in range(n):\n",
+        "        t.append(list(map(int, input().split())))\n",
+        "\n",
+        "    result = 0\n",
+        "    for i in range(n-1):\n",
+        "        result += t[i][0] * t[i+1][1] - t[i+1][0] * t[i][1]\n",
+        "    \n",
+        "    result += t[n-1][0] * t[0][1] - t[0][0] * t[n-1][1]\n",
+        "    result = round(0.5 * abs(result),1)\n",
+        "    \n",
+        "    print('{0:.1f}'.format(result))\n",
+        "\n",
         "\n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
         "    main()                      # 메인 함수 실행"
@@ -11059,7 +11081,7 @@
         "id": "J08dtKYX30yU"
       },
       "source": [
-        "####  번"
+        "####   11758번"
       ]
     },
     {
@@ -11068,11 +11090,45 @@
         "id": "2VWFZLql30yV"
       },
       "source": [
+        "# 참고 사이트 : https://www.acmicpc.net/blog/view/27\n",
+        "'''\n",
+        "\n",
+        "두 벡터 u x v의 외적은 대수적 법칙에 의해 \n",
+        "\n",
+        "| i  j  k  |\n",
+        "| x1 y1 z1 | = u x v => 벡터 u와 v의 외적이다.\n",
+        "| x2 y2 z2 |\n",
+        "\n",
+        "두 벡터의 외적을 통해 u x v의 방향에 대해 정의가 가능하고, \n",
+        "그 방향은 오른손의 법칙에 의해 확인이 가능하다.\n",
+        "\n",
+        "따라서, 아래 ccw의 함수는 P1을 원점으로 하는 벡터 u와 v의 외적 값으로 방향을 판단하는 함수이다.\n",
+        "\n",
+        "'''\n",
         "import sys\n",
         "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
-        "def main():\n",
+        "def ccw(list_vector):                                           # 리스트에 있는 세 점으로 방향을 판단하는 함수\n",
+        "    x = list_vector[0]                                              # 첫번째 좌표\n",
+        "    y = list_vector[1]                                              # 두번째 좌표\n",
+        "    z = list_vector[2]                                              # 세번째 좌표\n",
+        "    \n",
+        "    t = (y[0] - x[0])*(z[1] - x[1]) - (y[1] - x[1]) * (z[0] - x[0]) # x -> y, y -> z 벡터를 u, v로 두고 외적한 값\n",
+        "\n",
+        "    if t > 0:                                                       # 외적한 값이 양수이면\n",
+        "        return 1                                                        # 오른손의 법칙에 의해 반시계 방향을 나타낸다\n",
+        "    elif t == 0:                                                    # 외적한 값이 0 이면\n",
+        "        return 0                                                        # 따로 방향이 없으므로 일직선임을 나타낸다\n",
+        "    else:                                                           # 외적한 값이 음수이면\n",
+        "        return -1                                                       # 오른손의 법칙에 의해 시계 방향을 나타낸다.\n",
+        "\n",
+        "def main():                                     # 메인 함수\n",
+        "    t = []                                          # 좌표 평면위의 3 점을 담을 리스트\n",
+        "    for _ in range(3):                              # 3번 반복\n",
+        "        t.append(list(map(int, input().split())))       # 리스트에 각 좌표 입력\n",
+        "    \n",
+        "    print(ccw(t))                                   # 판단한 방향을 출력\n",
         "\n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
         "    main()                      # 메인 함수 실행"
@@ -11093,6 +11149,141 @@
       "cell_type": "code",
       "metadata": {
         "id": "OSarC7kz302f"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "\n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YMKx3SBSevNQ"
+      },
+      "source": [
+        "####  번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hm3yDakbevNR"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "\n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Cm1OSu2SevNR"
+      },
+      "source": [
+        "####  번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-BxdxzxUevNS"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "\n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-lMNyxheevNS"
+      },
+      "source": [
+        "####  번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CUAwF7ORevNS"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "\n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "W1bsY1TGewVw"
+      },
+      "source": [
+        "####  번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IlET16EJewVw"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "\n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jz9aOmpkewVw"
+      },
+      "source": [
+        "####  번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "glrFpDMtewVx"
       },
       "source": [
         "import sys\n",
