Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -162,7 +162,6 @@
         "-WWSnBrXA39V",
         "D8oqXAX5A4VI",
         "994fZwS78_ZX",
-        "BjBgQ5WJ302e",
         "YMKx3SBSevNQ",
         "Cm1OSu2SevNR",
         "-lMNyxheevNS",
@@ -227,7 +226,7 @@
         "CWT4iS2ert0S",
         "jyPXRy8ZyCvz"
       ],
-      "authorship_tag": "ABX9TyObrcq9bOQNn+r2FO6bKLqI",
+      "authorship_tag": "ABX9TyNJt4WzVsPe64WRB3PUozHO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -11036,7 +11035,7 @@
         "id": "994fZwS78_ZX"
       },
       "source": [
-        "####  2166번"
+        "####2166번(*)"
       ]
     },
     {
@@ -11081,7 +11080,7 @@
         "id": "J08dtKYX30yU"
       },
       "source": [
-        "####   11758번"
+        "#### 11758번(*) : CCW(Counter Clockwise)"
       ]
     },
     {
@@ -11142,7 +11141,7 @@
         "id": "BjBgQ5WJ302e"
       },
       "source": [
-        "####  번"
+        "#### 17386번(***)"
       ]
     },
     {
@@ -11151,11 +11150,33 @@
         "id": "OSarC7kz302f"
       },
       "source": [
+        "### https://velog.io/@jini_eun/%EB%B0%B1%EC%A4%80-17386%EB%B2%88-%EC%84%A0%EB%B6%84-%EA%B5%90%EC%B0%A8-1-Java-Python\n",
         "import sys\n",
         "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
+        "def ccw(list_vector):                                           # 리스트에 있는 세 점으로 방향을 판단하는 함수\n",
+        "    x = list_vector[:2]                                              # 첫번째 좌표\n",
+        "    y = list_vector[2:4]                                              # 두번째 좌표\n",
+        "    z = list_vector[4:]                                              # 세번째 좌표\n",
+        "    \n",
+        "    t = (y[0] - x[0])*(z[1] - x[1]) - (y[1] - x[1]) * (z[0] - x[0]) # x -> y, y -> z 벡터를 u, v로 두고 외적한 값\n",
+        "\n",
+        "    if t > 0:                                                       # 외적한 값이 양수이면\n",
+        "        return 1                                                        # 오른손의 법칙에 의해 반시계 방향을 나타낸다\n",
+        "    elif t == 0:                                                    # 외적한 값이 0 이면\n",
+        "        return 0                                                        # 따로 방향이 없으므로 일직선임을 나타낸다\n",
+        "    else:                                                           # 외적한 값이 음수이면\n",
+        "        return -1                                                       # 오른손의 법칙에 의해 시계 방향을 나타낸다.\n",
+        "        \n",
         "def main():\n",
+        "    l1 = list(map(int ,input().split()))\n",
+        "    l2 = list(map(int ,input().split()))\n",
+        "\n",
+        "    if ccw(l1 + l2[:2]) * ccw(l1 + l2[2:]) < 0 and ccw(l2 + l1[:2]) * ccw(l2 + l1[2:]) < 0:\n",
+        "        print(1)\n",
+        "    else:\n",
+        "        print(0)\n",
         "\n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
         "    main()                      # 메인 함수 실행"
