Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -162,7 +162,6 @@
         "-WWSnBrXA39V",
         "D8oqXAX5A4VI",
         "994fZwS78_ZX",
-        "YMKx3SBSevNQ",
         "Cm1OSu2SevNR",
         "-lMNyxheevNS",
         "W1bsY1TGewVw",
@@ -226,7 +225,7 @@
         "CWT4iS2ert0S",
         "jyPXRy8ZyCvz"
       ],
-      "authorship_tag": "ABX9TyNJt4WzVsPe64WRB3PUozHO",
+      "authorship_tag": "ABX9TyPKsKXObU7Ctd59QwRozHtu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -11190,7 +11189,7 @@
         "id": "YMKx3SBSevNQ"
       },
       "source": [
-        "####  번"
+        "####   17387번"
       ]
     },
     {
@@ -11203,8 +11202,44 @@
         "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
-        "def main():\n",
+        "def ccw(list_vector):                                           # 리스트에 있는 세 점으로 방향을 판단하는 함수\n",
+        "    x = list_vector[:2]                                              # 첫번째 좌표\n",
+        "    y = list_vector[2:4]                                              # 두번째 좌표\n",
+        "    z = list_vector[4:]                                              # 세번째 좌표\n",
+        "    \n",
+        "    t = (y[0] - x[0])*(z[1] - x[1]) - (y[1] - x[1]) * (z[0] - x[0]) # x -> y, y -> z 벡터를 u, v로 두고 외적한 값\n",
         "\n",
+        "    if t > 0:                                                       # 외적한 값이 양수이면\n",
+        "        return 1                                                        # 오른손의 법칙에 의해 반시계 방향을 나타낸다\n",
+        "    elif t == 0:                                                    # 외적한 값이 0 이면\n",
+        "        return 0                                                        # 따로 방향이 없으므로 일직선임을 나타낸다\n",
+        "    else:                                                           # 외적한 값이 음수이면\n",
+        "        return -1                                                       # 오른손의 법칙에 의해 시계 방향을 나타낸다.\n",
+        "        \n",
+        "def main():\n",
+        "    l1 = list(map(int ,input().split()))\n",
+        "    l2 = list(map(int ,input().split()))\n",
+        "\n",
+        "    l1_angle = ccw(l1 + l2[:2]) * ccw(l1 + l2[2:]) # 1 이면 다른 점 두개가\n",
+        "    l2_angle = ccw(l2 + l1[:2]) * ccw(l2 + l1[2:])\n",
+        "    if l1_angle == 0 and l2_angle == 0:\n",
+        "        \n",
+        "        ax, bx = min(l1[0], l1[2]), max(l1[0], l1[2])\n",
+        "        ay, by = min(l1[1], l1[3]), max(l1[1], l1[3])\n",
+        "\n",
+        "        cx, dx = min(l2[0], l2[2]), max(l2[0], l2[2])\n",
+        "        cy, dy = min(l2[1], l2[3]), max(l2[1], l2[3])\n",
+        "\n",
+        "        if cx <= bx and ax <= dx and cy <= by and ay <= dy:\n",
+        "            print(1)\n",
+        "        else:\n",
+        "            print(0)        \n",
+        "            \n",
+        "    elif l1_angle <= 0 and l2_angle <= 0:\n",
+        "        print(1)\n",
+        "    else:\n",
+        "        print(0)\n",
+        "    \n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
         "    main()                      # 메인 함수 실행"
       ],
