--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -162,7 +162,6 @@
         "-WWSnBrXA39V",
         "D8oqXAX5A4VI",
         "994fZwS78_ZX",
-        "Cm1OSu2SevNR",
         "-lMNyxheevNS",
         "W1bsY1TGewVw",
         "jz9aOmpkewVw",
@@ -225,7 +224,7 @@
         "CWT4iS2ert0S",
         "jyPXRy8ZyCvz"
       ],
-      "authorship_tag": "ABX9TyPKsKXObU7Ctd59QwRozHtu",
+      "authorship_tag": "ABX9TyP0WYyebquAmiSRvPDCcLDt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -11252,7 +11251,7 @@
         "id": "Cm1OSu2SevNR"
       },
       "source": [
-        "####  번"
+        "####   20149번"
       ]
     },
     {
@@ -11265,8 +11264,80 @@
         "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
-        "def main():\n",
+        "def ccw(list_vector):                                           # 리스트에 있는 세 점으로 방향을 판단하는 함수\n",
+        "    x = list_vector[:2]                                              # 첫번째 좌표\n",
+        "    y = list_vector[2:4]                                              # 두번째 좌표\n",
+        "    z = list_vector[4:]                                              # 세번째 좌표\n",
+        "    \n",
+        "    t = (y[0] - x[0])*(z[1] - x[1]) - (y[1] - x[1]) * (z[0] - x[0]) # x -> y, y -> z 벡터를 u, v로 두고 외적한 값\n",
         "\n",
+        "    if t > 0:                                                       # 외적한 값이 양수이면\n",
+        "        return 1                                                        # 오른손의 법칙에 의해 반시계 방향을 나타낸다\n",
+        "    elif t == 0:                                                    # 외적한 값이 0 이면\n",
+        "        return 0                                                        # 따로 방향이 없으므로 일직선임을 나타낸다\n",
+        "    else:                                                           # 외적한 값이 음수이면\n",
+        "        return -1                                                       # 오른손의 법칙에 의해 시계 방향을 나타낸다.\n",
+        "\n",
+        "def linear(x,a,b,grad):\n",
+        "    return grad*(x-a) + b\n",
+        "\n",
+        "def findPoint(list_1, list_2):\n",
+        "    x1, y1, x2, y2 = map(int, list_1)\n",
+        "    x3, y3, x4, y4 = map(int, list_2)\n",
+        "    \n",
+        "    if (x2 - x1) == 0:\n",
+        "        l2_grad = (y4 - y3) / (x4 - x3) # UnboundLocalError\n",
+        "        return [x1, linear(x1,x3,y3,l2_grad)]\n",
+        "\n",
+        "    l1_grad = (y2 - y1) / (x2 - x1)\n",
+        "\n",
+        "    if (x4 - x3) == 0:\n",
+        "        return [x3, linear(x3,x1,y1,l1_grad)]\n",
+        "\n",
+        "    l2_grad = (y4 - y3) / (x4 - x3)\n",
+        "\n",
+        "    res = (l1_grad * x1 - l2_grad * x3 - y1 + y3) / (l1_grad - l2_grad)\n",
+        "    return [res, linear(res,x1,y1,l1_grad)]\n",
+        "\n",
+        "\n",
+        "def main():\n",
+        "    l1 = list(map(int ,input().split()))\n",
+        "    l2 = list(map(int ,input().split()))\n",
+        "\n",
+        "    l1_123 = ccw(l1 + l2[:2]) # 1, -1 은 방향 0 은 수직선 위\n",
+        "    l1_124 = ccw(l1 + l2[2:])\n",
+        "    \n",
+        "    l2_341 = ccw(l2 + l1[:2])\n",
+        "    l2_342 = ccw(l2 + l1[2:])\n",
+        "\n",
+        "\n",
+        "    if l1_123 == 0 and l1_124 == 0 and l2_341 == 0 and l2_342 == 0: # 4 점이 일직선\n",
+        "        ax, bx = min(l1[0], l1[2]), max(l1[0], l1[2])\n",
+        "        ay, by = min(l1[1], l1[3]), max(l1[1], l1[3])\n",
+        "\n",
+        "        cx, dx = min(l2[0], l2[2]), max(l2[0], l2[2])\n",
+        "        cy, dy = min(l2[1], l2[3]), max(l2[1], l2[3])\n",
+        "\n",
+        "        \n",
+        "        if (cx == bx or ax == dx) and (cy == by or ay == dy): # 두 선분이 한점에서 겹침\n",
+        "            print(1)\n",
+        "            for i in range(0,4,2):\n",
+        "                for j in range(0,4,2):\n",
+        "                    if [l1[i], l1[i+1]] == [l2[j], l2[j+1]]:\n",
+        "                        print(l1[i], l1[i+1])\n",
+        "                        return\n",
+        "        elif cx <= bx and ax <= dx and cy <= by and ay <= dy: # 두 선분이 겹침\n",
+        "            print(1)\n",
+        "\n",
+        "        else:\n",
+        "            print(0)        \n",
+        "  \n",
+        "    elif l1_123 * l1_124 <= 0 and l2_341 * l2_342 <= 0:\n",
+        "        print(1)\n",
+        "        print(*findPoint(l1, l2))\n",
+        "    else:\n",
+        "        print(0)\n",
+        "    \n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
         "    main()                      # 메인 함수 실행"
       ],
