Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -150,19 +150,16 @@
         "kArAHccTng62",
         "nNO6sdMynhHy",
         "j-N-s25MnhQ7",
-        "G3BQimBInbs_",
         "RU-6_5TfnbtA",
         "vBoQtJDu-l5f",
         "0FbEMSMz-mjc",
         "9uEH1xMj-mm9",
         "F_HHKAkB-mqL",
-        "eV2Uw5Ym-mt0",
         "SVWsWXeW85B9",
         "XvFzDpYwA3KJ",
         "-WWSnBrXA39V",
         "D8oqXAX5A4VI",
         "994fZwS78_ZX",
-        "-lMNyxheevNS",
         "W1bsY1TGewVw",
         "jz9aOmpkewVw",
         "oqZ3i95jWOSr",
@@ -224,7 +221,7 @@
         "CWT4iS2ert0S",
         "jyPXRy8ZyCvz"
       ],
-      "authorship_tag": "ABX9TyP0WYyebquAmiSRvPDCcLDt",
+      "authorship_tag": "ABX9TyOaTKjpHV7Pw1n588j0H2d3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -11350,7 +11347,7 @@
         "id": "-lMNyxheevNS"
       },
       "source": [
-        "####  번"
+        "####   2162번"
       ]
     },
     {
@@ -11360,10 +11357,74 @@
       },
       "source": [
         "import sys\n",
-        "sys.setrecursionlimit(int(1e9))\n",
+        "#sys.setrecursionlimit(int(1e9)) => pypy3 로 진행하니까 메모리 초과가 안뜸\n",
         "input = sys.stdin.readline\n",
         "\n",
+        "def findParent(x):      # 부모 노드 찾는 함수\n",
+        "    if s[x] == x:           # 자신이 부모 노드이면\n",
+        "        return x                # 자신 return\n",
+        "\n",
+        "    s[x] = findParent(s[x]) # 부모 노드가 아니면, x의 부모노드로 변환\n",
+        "    return s[x]             # 결론적으로 x가 속한 집합의 root 반환\n",
+        "\n",
+        "def union(a, b):        # 합집합 연산\n",
+        "    x = findParent(a)\n",
+        "    y = findParent(b)\n",
+        "    if x < y:               # x 보다 y의 노드가 작으면\n",
+        "        s[y] = x                # y -> x 로 변환\n",
+        "    else:                   # 그 이외이면\n",
+        "        s[x] = y                # x -> y 로 변환\n",
+        "\n",
+        "def ccw(l1, l2, l3):                                           # 리스트에 있는 세 점으로 방향을 판단하는 함수\n",
+        "    t = (l2[0] - l1[0]) * (l3[1] - l1[1]) - (l2[1] - l1[1]) * (l3[0] - l1[0])\n",
+        "\n",
+        "    if t > 0:                                                       # 외적한 값이 양수이면\n",
+        "        return 1                                                        # 오른손의 법칙에 의해 반시계 방향을 나타낸다\n",
+        "    elif t == 0:                                                    # 외적한 값이 0 이면\n",
+        "        return 0                                                        # 따로 방향이 없으므로 일직선임을 나타낸다\n",
+        "    else:                                                           # 외적한 값이 음수이면\n",
+        "        return -1                                                       # 오른손의 법칙에 의해 시계 방향을 나타낸다.\n",
+        "\n",
+        "def check_ccw(l1,l2,l3,l4):\n",
+        "    if ccw(l1,l2,l3) * ccw(l1,l2,l3) == 0 and ccw(l3,l4,l1) * ccw(l3,l4,l2) == 0:\n",
+        "        if min(l1[0], l2[0]) <= max(l3[0], l4[0]) and min(l3[0], l4[0]) <= max(l1[0], l2[0]) and min(l1[1], l2[1]) <= max(l3[1], l4[1]) and min(l3[1], l4[1]) <= max(l1[1], l2[1]):\n",
+        "            return True\n",
+        "    elif ccw(l1,l2,l3) * ccw(l1,l2,l4) <= 0 and ccw(l3,l4,l1) * ccw(l3,l4,l2) <= 0:\n",
+        "        return True\n",
+        "    else:\n",
+        "        return False\n",
+        "\n",
+        "\n",
         "def main():\n",
+        "    global s\n",
+        "    n = int(input())\n",
+        "\n",
+        "    linear_list = []\n",
+        "    s = []\n",
+        "    for i in range(n):\n",
+        "        linear_list.append(list(map(int ,input().split())))\n",
+        "        s.append(i)\n",
+        "\n",
+        "    for i in range(n-1):\n",
+        "        for j in range(i,n):\n",
+        "            xy1 = linear_list[i][:2]\n",
+        "            xy2 = linear_list[i][2:]\n",
+        "            xy3 = linear_list[j][:2]\n",
+        "            xy4 = linear_list[j][2:]\n",
+        "\n",
+        "            if check_ccw(xy1, xy2, xy3, xy4):\n",
+        "                union(i, j)\n",
+        "\n",
+        "    result_set = {}\n",
+        "    for i in range(n):\n",
+        "        res = findParent(s[i])\n",
+        "        if res in result_set:\n",
+        "            result_set[res] += 1\n",
+        "        else:\n",
+        "            result_set[res] = 1\n",
+        "\n",
+        "    print(len(result_set))\n",
+        "    print(max(result_set.values()))\n",
         "\n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
         "    main()                      # 메인 함수 실행"
