Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -161,8 +161,8 @@
         "BjBgQ5WJ302e",
         "YMKx3SBSevNQ",
         "Cm1OSu2SevNR",
+        "-lMNyxheevNS",
         "W1bsY1TGewVw",
-        "jz9aOmpkewVw",
         "oqZ3i95jWOSr",
         "WzwUHBI4pjsC",
         "n-jLje1Epjv5",
@@ -220,7 +220,7 @@
         "CWT4iS2ert0S",
         "jyPXRy8ZyCvz"
       ],
-      "authorship_tag": "ABX9TyM0uUIhyU1F75I37ihYlbux",
+      "authorship_tag": "ABX9TyMxv2udjnSpT3YI8ngCMftz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -11503,7 +11503,7 @@
         "id": "jz9aOmpkewVw"
       },
       "source": [
-        "####  번"
+        "####   1069번"
       ]
     },
     {
@@ -11516,8 +11516,132 @@
         "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
-        "def main():\n",
+        "def main():                             # 메인 함수\n",
+        "    x, y, d, t = map(int, input().split())  # 각 정수 입력\n",
         "\n",
+        "    dist = (x ** 2 + y ** 2) ** 0.5         # 집까지 걸리는 거리\n",
+        "    \n",
+        "    time = t * (dist // d)                  # 집 근처까지 점프하는데 걸린 시간\n",
+        "\n",
+        "    if time == 0:                           # 집과 시작지점 그리고 꺽는 부분이 둔각일 경우\n",
+        "        print(min(dist,                     # 집까지 걸어가는 시간\n",
+        "                  2*t,                      # 한번 더 점프로 꺽어서 들어가는 시간\n",
+        "                  t + (d - dist)))          # 나머지 거리는 걸어간 시간\n",
+        "\n",
+        "    else:                                   # 집과 시작지점 그리고 꺽는 부분이 예각일 경우\n",
+        "        left_dist = (dist % d)              # 점프한 후 집까지 남은 거리\n",
+        "        print(min(dist,                     # 집까지 걸어가는 시간\n",
+        "                  time + left_dist,         # 나머지 거리는 걸어간 시간\n",
+        "                  time + t))                # 한번 더 점프로 꺽어서 들어가는 시간\n",
+        "    \n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fwCGk-rKnTUM"
+      },
+      "source": [
+        "### 33 단계 : ===========**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sYf1TsbxnTUM"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "agBW5v1PnTUN"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():                             \n",
+        "    \n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "A1uz7OJKnZV5"
+      },
+      "source": [
+        "### 34 단계 : ===========**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iOubY1LcnZV5"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6EJswhFQnZV5"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():                             \n",
+        "    \n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Juei-roPnbMe"
+      },
+      "source": [
+        "### 단계 : ===========**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HLUKhH5_nbMf"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "V_fPK_usnbMf"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():                             \n",
+        "    \n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
         "    main()                      # 메인 함수 실행"
       ],
