Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -156,6 +156,7 @@
         "XvFzDpYwA3KJ",
         "-WWSnBrXA39V",
         "D8oqXAX5A4VI",
+        "0l8CJACU8_ZX",
         "994fZwS78_ZX",
         "J08dtKYX30yU",
         "BjBgQ5WJ302e",
@@ -163,6 +164,9 @@
         "Cm1OSu2SevNR",
         "-lMNyxheevNS",
         "W1bsY1TGewVw",
+        "jz9aOmpkewVw",
+        "A1uz7OJKnZV5",
+        "Juei-roPnbMe",
         "oqZ3i95jWOSr",
         "WzwUHBI4pjsC",
         "n-jLje1Epjv5",
@@ -220,7 +224,7 @@
         "CWT4iS2ert0S",
         "jyPXRy8ZyCvz"
       ],
-      "authorship_tag": "ABX9TyMxv2udjnSpT3YI8ngCMftz",
+      "authorship_tag": "ABX9TyNTScnWfgCqpqqMZyJv8Vh7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -11546,7 +11550,7 @@
         "id": "fwCGk-rKnTUM"
       },
       "source": [
-        "### 33 단계 : ===========**"
+        "### 33 단계 : 동적 계획법 3(비트마스크, 원형 구성)===========**"
       ]
     },
     {
@@ -11555,7 +11559,7 @@
         "id": "sYf1TsbxnTUM"
       },
       "source": [
-        "#### "
+        "#### 11723번"
       ]
     },
     {
@@ -11568,7 +11572,180 @@
         "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
-        "def main():                             \n",
+        "def main():                     # 메인 함수\n",
+        "    s = [False] * 21                # 리스트로 진행하였지만 set() 함수 진행이 시간 복잡도에 더 좋음\n",
+        "    # s = set()\n",
+        "    for _ in range(int(input())):   # 입력 받은 수 만큼 반복\n",
+        "        t = input().split()             # 입력값 입력\n",
+        "\n",
+        "        if t[0] == 'add':               # 입력값의 커맨드가 add 일 경우\n",
+        "            if not s[int(t[1])]:            # 숫자의 값이 존재하지 않으면\n",
+        "                s[int(t[1])] = True             # 해당 값 존재하는 것으로 변경\n",
+        "            # s.add(int(t[0]))\n",
+        "\n",
+        "        elif t[0] == 'remove':          # 입력값의 커맨드가 remove 일 경우\n",
+        "            s[int(t[1])] = False            # 해당 값이 존재하지 않는 것으로 변경\n",
+        "            # s.discard(int(t[1]))\n",
+        "        \n",
+        "        elif t[0] == 'check':           # 입력값의 커맨드가 check 일 경우\n",
+        "            if s[int(t[1])]:                # 해당 값이 존재하면\n",
+        "                print(1)                        # 1 출력\n",
+        "            else:                           # 존재하지 않으면\n",
+        "                print(0)                        # 0 출력\n",
+        "            #print(1 if int(t[1]) in s else 0)\n",
+        "        \n",
+        "        elif t[0] == 'toggle':          # 입력값의 커맨드가 toggle 일 경우\n",
+        "            if not s[int(t[1])]:            # 숫자의 값이 존재하지 않으면\n",
+        "                s[int(t[1])] = True             # 존재하는 것으로 변경  \n",
+        "            else:                           # 존재하면\n",
+        "                s[int(t[1])] = False            # 존재하지 않는 것으로 변경\n",
+        "            #if int(t[1]) in s:\n",
+        "            #    s.discard(int(t[1]))\n",
+        "            #else:\n",
+        "            #    s.add(int(t[1]))\n",
+        "\n",
+        "        elif t[0] == 'all':             # 입력값의 커맨드가 all 일 경우\n",
+        "            s = [True] * 21                 # s를 차있는 것으로 reset\n",
+        "            # s = set([i for i in range(1,21)])\n",
+        "\n",
+        "        elif t[0] == 'empty':           # 입력값의 커맨드가 empty 일 경우\n",
+        "            s = [False] * 21                # s를 비어있는 것으로 reset\n",
+        "            # s = set()\n",
+        "    \n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YTYcjpPmy4pj"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bKiCbAb1y4pk"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    \n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0HVOrm1Ty47A"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jMcHmPcsy47B"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    \n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Bw4gARpNy5BK"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FLEP6SoAy5BL"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    \n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pyr7Rk9ay5Hq"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TtO6uNYUy5Hq"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    \n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-93NIS8dy5NX"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VoOQKLiKy5NY"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
         "    \n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
         "    main()                      # 메인 함수 실행"
@@ -11604,7 +11781,142 @@
         "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
-        "def main():                             \n",
+        "def main():\n",
+        "    \n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eoCzVsGCyBY4"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yCKq7XEwyBY8"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    \n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WKQGrq77yBcS"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "L7sgCUVMyBcS"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    \n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WCQpwpYNyXE7"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-tV-4B1jyXE7"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    \n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jb-2uLJgyXNm"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ty34vBzTyXNm"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    \n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "y2YExSSMyXVS"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Or9nH5PIyXVS"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
         "    \n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
         "    main()                      # 메인 함수 실행"
@@ -11640,7 +11952,7 @@
         "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
-        "def main():                             \n",
+        "def main():\n",
         "    \n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
         "    main()                      # 메인 함수 실행"
